--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,9 +7,14 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/aws-lambda": "^8.10.136",
-    "vitest": "^1.4.0",
-    "sst": "^2.41.4"
+    "@types/node": "^20.8.7",
+    "@types/aws-lambda": "^8.10.125",
+    "vitest": "^0.34.6",
+    "sst": "^2.31.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.433.0",
+    "@aws-sdk/client-textract": "^3.433.0",
+    "@aws-sdk/util-dynamodb": "^3.433.0"
   }
 }
