--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "axios": "^1.5.1",
+    "moment": "^2.29.4",
     "react-icons": "^4.11.0",
     "uuid": "^9.0.1"
   }
