--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -15,6 +15,7 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.438.0",
     "@aws-sdk/client-dynamodb": "^3.433.0",
     "@aws-sdk/client-eventbridge": "^3.433.0",
     "@aws-sdk/client-s3": "^3.433.0",
