--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   ],
   "dependencies": {
     "axios": "^1.5.1",
+    "i18next": "^23.10.1",
     "moment": "^2.29.4",
+    "react-i18next": "^14.1.0",
     "react-icons": "^4.11.0",
     "uuid": "^9.0.1"
   }
